# blogpost-devtalles

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/blogpost/: Makefile
backend/blogpost/blogpost/: asgi.py  settings.py  urls.py  wsgi.py
backend/blogpost/comments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/blogpost/comments/migrations/: 0001_initial.py
backend/blogpost/likes/: admin.py  models.py  serializers.py  urls.py  views.py
backend/blogpost/likes/migrations/: 0001_initial.py
backend/blogpost/posts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/blogpost/posts/migrations/: 0001_initial.py  0002_initial.py
backend/blogpost/users/: admin.py  models.py  serializer.py  urls.py  views.py
backend/blogpost/users/migrations/: 0001_initial.py
frontend/: README.md
